# sailfishos-chum-web

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  netlify.toml  rust-toolchain
.netlify/: state.json
public/: index.css  index.html  index.js
src/: impl_lambda.rs  impl_server.rs  lib.rs
